--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native-stack": "^6.9.18",
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.8.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-safe-area-context": "^4.9.0",
