--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
+    "lucide-react": "^0.338.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-safe-area-context": "^4.9.0",
