--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "expo": "~50.0.7",
+    "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "lucide-react": "^0.338.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0"
   },
