--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.338.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-haptic-feedback": "^2.2.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0"
