--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^15.0.0"
+    "react-native-svg": "14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
