--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "^2.15.0",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-ico-material-design": "^5.1.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0"
