--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.22.2",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-navigation/bottom-tabs": "^6.5.14",
-    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.18",
+    "@react-navigation/stack": "^6.3.23",
     "expo": "~50.0.7",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
@@ -28,7 +30,7 @@
     "react-native-ico-material-design": "^5.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
+    "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0"
   },
