--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.1",
     "@react-native-async-storage/async-storage": "^1.22.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-google-signin/google-signin": "^11.0.0",
@@ -19,16 +20,19 @@
     "expo": "~50.0.7",
     "expo-font": "~11.10.3",
     "expo-linear-gradient": "~12.7.2",
+    "expo-location": "~16.5.4",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.0",
     "lucide-react": "^0.338.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-bottom-sheet": "^1.0.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-ico-material-design": "^5.1.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "1.10.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
