--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@gorhom/bottom-sheet": "^4.6.1",
     "@react-native-async-storage/async-storage": "^1.22.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^19.0.0",
+    "@react-native-firebase/firestore": "^19.0.0",
     "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native": "^6.1.12",
