--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
