--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.6.1",
     "@react-native-async-storage/async-storage": "^1.22.2",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^19.0.0",
     "@react-native-firebase/firestore": "^19.0.0",
@@ -30,6 +31,7 @@
     "react-native": "0.73.4",
     "react-native-bottom-sheet": "^1.0.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-datepicker": "^1.7.2",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-ico-material-design": "^5.1.2",
