--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-linear-gradient": "~12.7.2",
     "expo-location": "~16.5.4",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.11",
     "firebase": "^10.8.0",
     "lucide-react": "^0.338.0",
     "react": "18.2.0",
